# ins-cli

./: Cargo.toml  README.md  go.mod  go.sum  main.go
.github/workflows/: release_build.yml
cmd/: register.go  root.go
pkg/contracts/: iotex_registrar_controller.go  iotx_registrar_controller.abi  public_resolver.abi  public_resolver.go
pkg/ins/: register.go
src/: lib.rs  main.rs  utils.rs
src/cmd/: commands.rs  mod.rs  register.rs
